--- a/meowbottomnavigation/src/main/res/layout/meow_navigation_cell.xml
+++ b/meowbottomnavigation/src/main/res/layout/meow_navigation_cell.xml
@@ -5,14 +5,17 @@
 
     <View
         android:id="@+id/v_circle"
-        android:layout_width="48dp"
-        android:layout_height="48dp" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
     <FrameLayout
         android:id="@+id/fl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:elevation="6dp"
         android:padding="8dp"
         tools:targetApi="lollipop">
@@ -23,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"
-            app:meow_imageview_size="24dp" />
+            app:meow_imageview_size="30dp" />
 
         <TextView
             android:id="@+id/tv_count"
