--- a/meowbottomnavigation/src/main/res/layout/meow_navigation_cell.xml
+++ b/meowbottomnavigation/src/main/res/layout/meow_navigation_cell.xml
@@ -5,8 +5,11 @@
 
     <View
         android:id="@+id/v_circle"
-        android:layout_width="48dp"
-        android:layout_height="48dp" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        />
 
     <FrameLayout
         android:id="@+id/fl"
@@ -14,16 +17,16 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:elevation="6dp"
-        android:padding="8dp"
         tools:targetApi="lollipop">
 
         <com.etebarian.meowbottomnavigation.CellImageView
             android:id="@+id/iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="10dp"
-            app:meow_imageview_size="24dp" />
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="35dp"
+            android:padding="6dp"
+            app:meow_imageview_size="30dp" />
 
         <TextView
             android:id="@+id/tv_count"
